--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,11 @@
     <string name="download_scheme_unsupported">This demo app only supports downloading http streams</string>
 
     <string name="download_ads_unsupported">IMA does not support offline ads</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
+
+    <string-array name="recipe_names">
+    </string-array>
 
     <!--New Player Added-->
 </resources>
